# VotingSystemSim

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: workflow_actions.yml
votingsystemsim/: State.py
